--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,10 @@
                 android:id="@+id/android_switch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:checked="false"
                 android:text="Display"
-                android:textAlignment="textEnd" />
+                android:textAlignment="textEnd"
+                tools:checked="false" />
         </LinearLayout>
 
         <LinearLayout
@@ -181,6 +183,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:checked="false"
                 android:text="Display"
                 android:textAlignment="textEnd" />
 
